Update method of setting max height for content to fix issues on mobile browsers

--- a/_sass/theme/_base.scss
+++ b/_sass/theme/_base.scss
@@ -2,6 +2,11 @@
   box-sizing: border-box;
 }
 
+html, body {
+  height: 100%;
+  min-height: 100%;
+}
+
 html {
   font-size: 16px;
 }
@@ -10,7 +15,6 @@ body {
   display: flex;
   flex-direction: column;
   font-family: $base-font-family;
-  height: 100vh;
   margin: 0;
 }
 
