--- a/_sass/theme/_layout.scss
+++ b/_sass/theme/_layout.scss
@@ -20,10 +20,12 @@
  */
 
 .default-content {
-  flex: 1;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-
+  height: 100%;
+  min-height: 100%;
 }
 
 /**
@@ -120,6 +122,13 @@
 
   &:not(:last-child) {
     margin-right: 40px;
+  }
+
+  /**
+   * FontAwesome icons use an <i> element.
+   */
+  i {
+    line-height: 1;
   }
 }
 
